[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/npc_720.png" type="Texture" id=1]
[ext_resource path="res://assets/cenário.png" type="Texture" id=2]
[ext_resource path="res://assets/caixa_texto_g.png" type="Texture" id=3]
[ext_resource path="res://NinePatchRect.gd" type="Script" id=4]
[ext_resource path="res://assets/box_alternativas.png" type="Texture" id=5]
[ext_resource path="res://assets/barrahumor_720.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]

[node name="Cenário" type="Sprite" parent="."]
pause_mode = 2
process_priority = 10
position = Vector2( 511.5, 232.5 )
scale = Vector2( 0.257633, 0.223025 )
texture = ExtResource( 2 )

[node name="Npc720" type="Sprite" parent="."]
position = Vector2( 229, 269 )
scale = Vector2( 0.589589, 0.589589 )
texture = ExtResource( 1 )

[node name="BoxAlternativas" type="Sprite" parent="."]
position = Vector2( 512.612, 351.5 )
scale = Vector2( 0.259091, 0.172234 )
texture = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 228.0
margin_top = 86.0
margin_right = 724.0
margin_bottom = 264.0
grow_horizontal = 0
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
margin_left = -146.0
margin_top = 169.0
margin_right = -116.0
margin_bottom = 317.0
rect_rotation = 180.0
color = Color( 0.301961, 0.937255, 0.192157, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.132935
anchor_top = 0.190618
anchor_right = 0.918936
anchor_bottom = 0.831618
margin_left = 0.0639954
margin_top = 0.0699997
margin_right = -1.79202
margin_bottom = -0.0279999
visible_characters = 0
percent_visible = 0.0
text = "Em linguística, a noção de texto é ampla e ainda aberta a uma definição mais precisa. Grosso modo, pode ser entendido como manifestação linguística das ideias de um autor, que serão interpretadas pelo leitor de acordo com seus conhecimentos linguísticos e culturais. Seu tamanho é variável. "
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="NinePatchRect"]
wait_time = 0.05

[node name="Button" type="Button" parent="NinePatchRect"]
margin_left = -192.0
margin_top = 388.0
margin_right = 346.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 344, 30 )
text = "A. Claro, sem problemas!"
align = 0

[node name="Button3" type="Button" parent="NinePatchRect"]
margin_left = -193.0
margin_top = 428.0
margin_right = 345.0
margin_bottom = 458.0
rect_pivot_offset = Vector2( 344, 30 )
text = "B. Ah, já que você está pedindo!"
align = 0

[node name="Button2" type="Button" parent="NinePatchRect"]
margin_left = -194.0
margin_top = 471.0
margin_right = 344.0
margin_bottom = 501.0
rect_pivot_offset = Vector2( 344, 30 )
text = "C. Se der tempo sim."
align = 0

[node name="Button4" type="Button" parent="NinePatchRect"]
visible = false
margin_left = 415.0
margin_top = 129.0
margin_right = 470.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 344, 30 )
text = "Skip"

[node name="Barrahumor720" type="Sprite" parent="."]
position = Vector2( 67, 197 )
scale = Vector2( 0.330169, 0.277284 )
texture = ExtResource( 6 )

[connection signal="tree_exited" from="NinePatchRect/ColorRect" to="NinePatchRect" method="_on_ColorRect_tree_exited"]
[connection signal="timeout" from="NinePatchRect/Timer" to="NinePatchRect" method="_on_Timer_timeout"]
[connection signal="pressed" from="NinePatchRect/Button" to="NinePatchRect" method="_on_Button_pressed"]
[connection signal="pressed" from="NinePatchRect/Button3" to="NinePatchRect" method="_on_Button3_pressed"]
[connection signal="pressed" from="NinePatchRect/Button2" to="NinePatchRect" method="_on_Button2_pressed"]
[connection signal="pressed" from="NinePatchRect/Button4" to="NinePatchRect" method="_on_Button4_pressed"]
